Sun Mar  4 17:01:09 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* string.c (trnext): support backslash escape in String#tr.

Wed Feb 28 11:02:41 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_delete_bang): delete! should take at least 1
	  argument. 

Tue Feb 27 16:38:15 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (ev_const_get): retrieve Object's caonstat if no current
	  class is available (e.g. defining singleton class for Fixnums).

	* eval.c (ev_const_defined): check Object's constant if no current
	  class is available (e.g. defining singleton class for Fixnums).

	* eval.c (proc_call): ignore block to `call' always, despite of
	  being orphan or not.

Wed Feb 27 10:16:32 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* eval.c (rb_yield_0): should check based on rb_block_given_p()
	  and rb_f_block_given_p().

Mon Feb 26 16:20:27 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ruby.c (proc_options): call ruby_show_version() just once.

Mon Feb 26 00:04:52 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (proc_call): should not modify ruby_block->frame.iter
	  based on ruby_frame->iter altered by PUSH_ITER().

Mon Feb 26 05:27:52 2001  Wakou Aoyama  <wakou@fsinet.or.jp>

	* lib/net/telnet.rb: #telnetmode(), #binmode(): bug fix.
	  thanks to nobu.nakada@nifty.ne.jp.

Mon Feb 26 04:55:50 2001  Wakou Aoyama  <wakou@fsinet.or.jp>

	* lib/cgi.rb: CGI#form(): bug fix.
	  thanks to MoonWolf <moonwolf@moonwolf.com>.

	* lib/cgi.rb: CGI#rfc1123_date(): improvement.
	  thanks to Tomoyasu Akita <genzo-@dm4lab.to>.

	* lib/cgi.rb: CGI#header(): improvement for mod_ruby.
	  thanks to Shugo Maeda <shugo@ruby-lang.org>.

Sun Feb 25 02:45:30 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* file.c (rb_file_s_rename): avoid Cygwin's bug.

Sat Feb 24 23:32:55 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_thread_fd_close): should save current context before
	  raising exception.
