@@ -1,3 +1,8 @@
+Sun Mar  4 20:45:20 2001  Akinori MUSHA  <knu@iDaemons.org>
+
+	* ext/extmk.rb.in, lib/mkmf.rb: add C++ rules in addition to C
+	rules.
+
 Sun Mar  4 17:01:09 2001  WATANABE Hirofumi  <eban@ruby-lang.org>
 
 	* string.c (trnext): support backslash escape in String#tr.
